docs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic
  namespace: open-feature-test
  labels:
    app: petclinic
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: petclinic
